# epic_events

./: .env_  .flake8  .gitignore  README.md  create_table.py  epic_events.py  epicevents.py  lieux-de-tournage-a-paris.csv  memo_commande.txt  pyproject.toml  setup_db.py
data/: lieux_de_tournage.csv
flake_report/: index.html
sources/: auth.py  controller.py  controllers.py  database.py  exceptions.py  main_controller.py  models.py  setup_db.py  validators.py  views.py
sources/cmd/: client_cmd.py  contract_cmd.py  db_cmd.py  department_cmd.py  enterprise_cmd.py  event_cmd.py  user_cmd.py
sources/command/: client_command.py  contract_command.py  department_command.py  enterprise_command.py  event_command.py  tool_command.py  user_command.py
sources/controller/: auth_controller.py  authorisation_controller.py  client_controller.py  contract_controller.py  department_controller.py  enterprise_controller.py  event_controller.py  location_controller.py  security_controller.py  token_controller.py  tool_controller.py  user_controller.py
sources/controllers/: auth.py  clients.py  departments.py  enterprises.py  users.py
sources/ctr/: __init__.py  base_ctr.py  client_ctr.py  contract_ctr.py  department_ctr.py  enterprise_ctr.py  event_ctr.py  location_ctr.py  tool_ctr.py  user_ctr.py
sources/dao/: __init__.py  base_dao.py  client_dao.py  contract_dao.py  department_dao.py  enterprise_dao.py  event_dao.py  location_dao.py  setup_db.py  user_dao.py
sources/database/: setup_db.py
sources/ress/: authorisation.py  context_manager.py  exceptions.py  models.py  view.py  (+5 more)
